welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
	if (d>=13 && d<=19) ado=ado+1
                               ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
	if (d>=13 && d<=19) ado=ado+1
        ^